--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,12 +62,21 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/logo.png"
   min_sdk_android: 21
+
+flutter_native_splash:
+  color: "#000000"
+  image: "assets/images/logo.png"
+  android_12:
+    color: "#000000"
+    image: "assets/images/logo.png"
+  fullscreen: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
