--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,6 @@ dependencies:
   avatar_glow: ^3.0.1
   confetti: ^0.8.0
   printing: ^5.13.2
-  home_widget: ^0.9.0
   # flutter_local_notifications: ^17.0.0  # Temporairement désactivé pour compilation
 
 dev_dependencies:
@@ -70,6 +69,8 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/images/logo.png"
   min_sdk_android: 21
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/images/logo.png"
 
 flutter_native_splash:
   color: "#000000"
@@ -95,6 +96,7 @@ flutter:
     - assets/sounds/
     - assets/animations/
     - assets/images/
+    - assets/images/avatars/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
