feat: Introduce a dynamic theming system with multiple visual themes, new core UI screens, and associated widgets and assets.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ flutter:
     - assets/animations/
     - assets/images/
     - assets/images/avatars/
+    - assets/images/themes/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
