--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <!-- Permission pour définir un fond d'écran (thèmes personnalisés) -->
+    <uses-permission android:name="android.permission.SET_WALLPAPER"/>
     
     <application
         android:label="@string/app_name"
