--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,15 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+# Build (sauf APK de release pour les inclure dans le dépôt)
+/build/*
+!/build/app/
+/build/app/*
+!/build/app/outputs/
+/build/app/outputs/*
+!/build/app/outputs/flutter-apk/
+!/build/app/outputs/flutter-apk/*
+
 /coverage/
 
 # Symbolication related
