--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Clé de signature (NE JAMAIS COMMITTER)
+android/key.properties
+android/app/upload-keystore.jks
+*.jks
+*.keystore
